<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.onboard.QueryFragment">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/query_question"
            android:textAlignment="center"
            style="@style/BigBold"
            app:layout_constraintBottom_toTopOf="@+id/parent_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.8" />

        <View
            android:id="@+id/parent_button"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:background="@drawable/round_grey_bg"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/child_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/child_button"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:background="@drawable/round_grey_bg"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/parent_button"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Parent"
            style="@style/BigBold"
            app:layout_constraintBottom_toBottomOf="@+id/parent_button"
            app:layout_constraintEnd_toEndOf="@+id/parent_button"
            app:layout_constraintStart_toStartOf="@+id/parent_button"
            app:layout_constraintTop_toTopOf="@+id/parent_button" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Child"
            style="@style/BigBold"
            app:layout_constraintBottom_toBottomOf="@+id/child_button"
            app:layout_constraintEnd_toEndOf="@+id/child_button"
            app:layout_constraintStart_toStartOf="@+id/child_button"
            app:layout_constraintTop_toTopOf="@+id/child_button" />


</androidx.constraintlayout.widget.ConstraintLayout>
</layout>